# LLM

./: .gitignore  CDS547_Project_Proposal_Filled.md  CONTRIBUTING.md  README_Submissions.md
experiments/: reasoning_experiment_results_20260329_123310.json
progress_report/: main.tex
rag_qa/: .env.example  README.md  analyze.py  analyze_results.py  config.yaml  generate_final_analysis.py  pyproject.toml  requirements.txt  test_retrieval_agent.py
rag_qa/ablation_results/: ablation_report_20260329_165802.txt  ablation_results_20260329_165802.json
rag_qa/data/: eval_hotpot_complex.jsonl  eval_squad_moderate.jsonl
rag_qa/data/corpus/: cds547_course_notes.txt  hotpot_paragraphs.txt  squad_paragraphs.txt
rag_qa/data/index/: bm25.pkl  dense.npy  meta.json  records.pkl
rag_qa/eval/: hotpotqa_subset.jsonl
rag_qa/rag_qa/: __init__.py  __main__.py  chunking.py  chunking_ablation.py  chunking_strategies.py  cli.py  config.py  generate.py  index_store.py  ingest.py  metrics.py  pipeline.py  prompts.py  retrieve.py
rag_qa/rag_qa/agents/: __init__.py  base_agent.py  critic_agent.py  reasoning_agent.py  retrieval_agent.py  route_agent.py  synthesis_agent.py
rag_qa/scripts/: download_eval_datasets.py  fetch_missing_corpus.py  generate_report.py
rag_qa/tests/: demo_route_agent.py  experiment_reasoning.py  test_api_debug.py  test_env.py  test_env2.py  test_openrouter.py  test_openrouter2.py  test_real_route.py  test_real_route_final.py  test_reasoning_agent.py  test_synthesis_agent.py
rag_qa_project/: config.yaml  test_models.py
rag_qa_project/eval/: questions.jsonl
(+8 files in other folders)
