[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-qa-cds547"
version = "0.1.0"
description = "RAG document QA for CDS547"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_qa*"]

[project.scripts]
rag-qa = "rag_qa.cli:main"
